--- a/balloons.html
+++ b/balloons.html
@@ -4,7 +4,7 @@
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
    </head>
-   <body>
+   <body style="overflow: hidden;">
 
       <canvas id="balloonCanvas"></canvas>
       <script type="text/javascript" src="./asd/rough.js"></script>
